<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:title="Quran settings" 
  android:key="@string/prefs_path">
	<PreferenceCategory 
		android:title="@string/prefs_category_display_settings">  
		<CheckBoxPreference 
			android:summaryOff="Screen will turn off when device is idle"
			android:title="Keep screen on" 
			android:summaryOn="Screen will stay on while reading"
			android:persistent="true" 
			android:key="@string/prefs_keep_screen_on">
		</CheckBoxPreference> 
		<CheckBoxPreference 
			android:title="Arabic sura names" 
			android:summaryOn="Sura names are in Arabic" 
			android:summaryOff="Sura names are transliterated" 
			android:defaultValue="false"
			android:persistent="true"
			android:disableDependentsState="false"
			android:key="@string/prefs_use_arabic_names">			
		</CheckBoxPreference>
		<CheckBoxPreference 
			android:title="Fix Arabic text" 
			android:summary="Select if your device doesn't support Arabic" 
			android:persistent="true"
			android:key="@string/prefs_reshape_arabic"			
			android:dependency="@string/prefs_use_arabic_names">			
		</CheckBoxPreference>
		<CheckBoxPreference 
			android:title="Lock screen orientation" 
			android:summaryOn="Quran page will be in fixed orientation mode"
			android:summaryOff="Adaptive to current orientation mode"
			android:key="@string/prefs_lock_orientation"
			android:defaultValue="false"
			android:persistent="true"
			android:disableDependentsState="false">
		</CheckBoxPreference>
		<CheckBoxPreference 
			android:key="@string/prefs_landscape_orientation"
			android:title="Landscape orientation"
			android:persistent="true" 
			android:summaryOn="Landscape orientation will be used" 
			android:summaryOff="Portrait orientation will be used" 
			android:dependency="@string/prefs_lock_orientation">
		</CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefs_category_reading">
		<CheckBoxPreference 
			android:title="Display marker popups" 
			android:summaryOn="Display popup when reaching juz', hizb, etc."
			android:summaryOff="Don't display popup when reaching juz', hizb, etc." 
			android:persistent="true"
			android:key="@string/prefs_display_marker_popup"
			android:defaultValue="true">
		</CheckBoxPreference>
		<CheckBoxPreference 
			android:title="Auto scroll" 
			android:summaryOn="Auto scroll to highlighted aya while playing (in landscape)"
			android:summaryOff="Don't auto scroll to highlighted aya while playing (in landscape)" 
			android:persistent="true"
			android:key="@string/prefs_auto_scroll"
			android:defaultValue="true">
		</CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/prefs_category_translation">
		<com.quran.labs.androidquran.widgets.SelectTranslationPreference
	    	android:key="@string/prefs_active_translation"
	    	android:title="Active translation" 
	    	android:summary="Switch between downloaded translations. Select 'Menu > Get Translations' to display a full list of available translations"
	    	android:dialogTitle="Select active translation" />
		<com.quran.labs.androidquran.widgets.SeekBarPreference
			android:key="@string/prefs_translation_text_size" 
			android:title="Translation text size"
			android:persistent="true"
			android:dialogMessage="Text size"
			android:summary="Customize the translation text size"
			android:defaultValue="15"
			android:max="40" />
	</PreferenceCategory>
</PreferenceScreen>